test/error/readonlymove.luau
table.move({}, 2, 3, 2, math)
